--- a/API/.gitignore
+++ b/API/.gitignore
@@ -3,14 +3,19 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Custom ignore files
+./appsettings.Development.json
+./appsettings.json
+*.appsettingsDevelopment.json
+*.appsettings.json
+
 # User-specific files
 *.rsuser
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
-*.appsettingsDevelopment.json
-*.appsettings.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
