--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexMysql": "server=localhost;user=root;password:123456;database=ketentacion"
+    "ConexMysql": "server=localhost;user=root;password=123456;database=ketentacion"
   }
 }
